# SPDX-FileCopyrightText: 2019 Tuomas Siipola
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "pio"
version = "0.3.1"
authors = ["Tuomas Siipola <tuomas@zpl.fi>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
dssim = "2.10.1"
imgref = "1.6.1"
mozjpeg = "0.8.17"
rgb = "0.8.18"
lodepng = "3.0.0"
imagequant = "2.12.5"
libwebp-sys = "0.3.0"
clap = "2.33.1"
image = { version = "0.23.6", default-features = false }
kamadak-exif = "0.5.1"
