# SPDX-FileCopyrightText: 2019 Tuomas Siipola
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "pio"
version = "0.4.0"
authors = ["Tuomas Siipola <tuomas@zpl.fi>"]
edition = "2018"
license = "AGPL-3.0-or-later"
default-run = "pio"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
dssim-core = "3.1.0"
imgref = "1.6.1"
mozjpeg = "0.9.1"
rgb = "0.8.18"
lodepng = "3.0.0"
imagequant = "4.0.0"
libwebp-sys = "0.4.2"
clap = { version = "3.0.14", features = ["derive"] }
image = { version = "0.24.0", default-features = false }
kamadak-exif = "0.5.1"
rayon = "1.3.1"
rand = "0.8.4"
lcms2 = "5.3.1"

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.1.0"
